@@ -190,6 +190,9 @@ main (int argc, char **argv)
 
         /* Create window */
         window = gtk_window_new (GTK_WINDOW_TOPLEVEL);
+
+        gtk_widget_set_name (window, "MatchboxPanel");
+        
         gtk_window_set_type_hint (GTK_WINDOW (window),
                                   GDK_WINDOW_TYPE_HINT_DOCK);
 
